# poker

./: CMakeLists.txt  compile_commands.json  conanfile.txt  flipable.qml
Card/: Card.qml
Resources/: resources.qrc
include/: cards_helper.hpp  connector.hpp  deck.hpp  requester.hpp
include/common/: game_state.hpp  ring.hpp
src/: cards_helper.cpp  connector.cpp  main.cpp
